--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shaft-temp-guardian</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Portal Kainex</title>
+    <!-- <meta name="description" content="Lovable Generated Project" /> -->
+    <!-- <meta name="author" content="Lovable" /> -->
 
     <meta property="og:title" content="shaft-temp-guardian" />
     <meta property="og:description" content="Lovable Generated Project" />
